# timer

./: CMakeLists.txt  LICENSE  README.md
example/: example.cpp
include/: timer.h
